; ModuleID = '/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccgen.c_vpushs.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccgen.c_vpushs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@PTR_SIZE = common dso_local global i32 0, align 4
@size_type = common dso_local global i32 0, align 4
@VT_CONST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @vpushs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vpushs(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_3__, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i32, i32* @PTR_SIZE, align 4
  %5 = icmp eq i32 %4, 4
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = trunc i64 %7 to i32
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  store i32 %8, i32* %9, align 8
  br label %13

10:                                               ; preds = %1
  %11 = load i64, i64* %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  store i64 %11, i64* %12, align 8
  br label %13

13:                                               ; preds = %10, %6
  %14 = load i32, i32* @VT_CONST, align 4
  %15 = call i32 @vsetc(i32* @size_type, i32 %14, %struct.TYPE_3__* %3)
  ret void
}

declare dso_local i32 @vsetc(i32*, i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
